--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "body-parser": "^1.20.3",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "helmet": "^8.0.0",
     "knex": "^3.1.0",
     "nodemailer": "^6.9.16",
     "oracledb": "^6.7.0"
