--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "devDependencies": {
     "@types/jest": "^29.5.14",
     "@types/nodemailer": "^6.4.17",
+    "@types/oracledb": "^6.5.2",
     "@types/supertest": "^6.0.2",
     "jest": "^29.7.0",
     "nodemon": "^3.1.7",
